<resources>
    <string name="app_name">Smart Translator</string>
    <string name="start">Start</string>
    <string name="photo">Photo</string>
    <string name="back">Домой</string>
    <string name="check">Check</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="result">RESULT</string>
    <string name="results_hint">----------- Results will be here -----------</string>
    <string name="favorite">favorite</string>
    <string name="no_results">Sorry, we nothing found :(</string>
    <string name="List_of_languages">Language list</string>

    <string name="menu_select_flags_title_reset">Reset</string>
    <string name="menu_select_flags_title_done">Done</string>

    <string name="fragment_select_flags_title">Select flags</string>
    <string name="fragment_history">History</string>
    <string name="fragment_favorite">Favorite</string>

<!--    bottom menu items   -->
    <string name="bottom_menu_item_home">Home</string>
    <string name="bottom_menu_item_history">History</string>
    <string name="bottom_menu_item_favorite">Favorite</string>
</resources>
