<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/home_flag_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="9"
            app:layout_constraintBottom_toTopOf="@+id/home_buttons_gallery_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.163">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_flag_list_from"
                    android:layout_width="90dp"
                    android:layout_height="250dp"
                    android:divider="@color/colorPrimary"
                    android:dividerHeight="0dp"
                    android:fadingEdge="horizontal"
                    android:fadingEdgeLength="40dp"
                    android:fillViewport="false"
                    android:layoutAnimation="@anim/layout_animator"
                    android:orientation="vertical"
                    android:requiresFadingEdge="vertical" />

                <TextView
                    android:id="@+id/home_from_text"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textColor="@color/colorAccent"
                    android:textSize="26sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_flag_list_layout" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_flag_list_to"
                    android:layout_width="90dp"
                    android:layout_height="250dp"
                    android:divider="@color/colorPrimary"
                    android:dividerHeight="0dp"
                    android:fadingEdge="horizontal"
                    android:fadingEdgeLength="40dp"
                    android:fillViewport="false"
                    android:orientation="vertical"
                    android:requiresFadingEdge="vertical" />

                <TextView
                    android:id="@+id/home_to_text"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textColor="@color/colorAccent"
                    android:textSize="26sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_buttons_gallery_layout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginBottom="88dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageButton
                android:id="@+id/home_button_photo"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_photo"
                android:padding="10dp"
                android:src="@drawable/ic_basic_photo"
                android:tint="@drawable/selector" />

            <ImageButton
                android:id="@+id/home_button_gallery"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/button_gallery"
                android:padding="10dp"
                android:src="@drawable/ic_gallery"
                android:tint="@drawable/selector" />

        </LinearLayout>

        <Button
            android:id="@+id/home_button_choose_flags"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_flags"
            android:drawableStart="@drawable/ic_line_dots"
            android:padding="10dp"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/List_of_languages"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_buttons_gallery_layout"
            app:layout_constraintVertical_bias="0.181" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>